[package]
name = "romano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
cucumber = "0.21.0"
futures = "0.3"
tracing = "0.1"
float-cmp = "0.9.0"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "time"] }


[[test]]
name = "tuples"
harness = false

[[test]]
name = "colors"
harness = false

[[test]]
name = "canvas"
harness = false
